[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-content-normalizer"
version = "0.1.0"
description = "Normalize LangChain, MCP, and multimodal content blocks into provider-ready text and image payloads."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Benjamin Jornet", email = "benjamin.jornet@gmail.com" }]
keywords = ["langchain", "mcp", "llm", "multimodal", "content-normalization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/benjaminjornet/langchain-content-normalizer"
Issues = "https://github.com/benjaminjornet/langchain-content-normalizer/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lc_content_normalizer"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
